opam-version: "2.0"
name: "jeff65"
version: "0.1"
synopsis: "A compiler targeting the Commodore 64"
maintainer: ["Jonathan David Page <jonathan@sleepingcyb.org>"
             "Woodrow Barlow <wjbarlow@ncsu.edu>"]
authors: ["Jonathan David Page <jonathan@sleepingcyb.org>"
          "Woodrow Barlow <wjbarlow@ncsu.edu>"]
license: "GPLv3+"
homepage: "https://github.com/anachronauts/jeff65"
bug-reports: "https://github.com/anachronauts/jeff65/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {build & >= "4.07.0"}
  "dune" {build & >= "1.0"}
  "astring" {>= "0.8.3"}
  "cmdliner" {>= "1.0.3" & < "2.0"}
  "containers" {>= "2.5" & < "3.0"}
  "fmt" {>= "0.8.5"}
  "fpath" {>= "0.7.2"}
  "menhir" {>= "20181113"}
  "ppx_monadic" {>= "2.3.0" & < "3.0"}
  "sedlex" {>= "2.0"}
  "uunf" {>= "11.0.0"}
  "uutf" {>= "1.0.2" & < "2.0"}
]
