[metadata]
name = jeff65
version = 0.1
author = Jonathan David Page, Woodrow Barlow
author_email = jeff65-maintainers@sleepingcyb.org
description = A compiler targeting the Commodore 64
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdpage/jeff65
license = GNU General Public License v3 (GPLv3)
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
  attrs>=18.2.0
  regex>=2018.08.29
python_requires = >=3.6

[flake8]
builtins = _, __
exclude =
  .git,
  __pycache__,

[nosetests]
with-coverage = 1
cover-package = jeff65
cover-erase = 1

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  raise NotImplementedError
