[metadata]
name = jeff65
version = 0.1
author = Jonathan David Page, Woodrow Barlow
author_email = jeff65-maintainers@sleepingcyb.org
description = A compiler targeting the Commodore 64
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdpage/jeff65
license = GNU General Public License v3 (GPLv3)
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
  attrs>=18.2.0
  regex>=2018.08.29
python_requires = >=3.6
package_dir =
  =src

[flake8]
builtins = _, __
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude =
    .eggs,
    .git,
    .hg,
    .mypy_cache,
    .tox,
    .venv,
    __pycache__,
    _build,
    buck-out,
    build,
    dist,

[nosetests]
with-coverage = 1
cover-package = jeff65
cover-erase = 1

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  raise NotImplementedError
