[metadata]
name = jeff65
version = 0.1
author = Jonathan David Page, Woodrow Barlow
author_email = jeff65-maintainers@sleepingcyb.org
description = A compiler targeting the Commodore 64
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdpage/jeff65
license = GNU General Public License v3 (GPLv3)
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
  attrs>=18.2.0
  regex>=2018.08.29
python_requires = >=3.6
package_dir =
  =src
